--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: "Noka Black";
-    src: url("../src/assets/Noka-black.otf");
+    src: url("../public/assets/Noka-black.otf");
 }
 
 * {
